<resources>
    <string name="app_name">Food 4 All</string>
    <string name="title_activity_regvolunteer">regvolunteer</string>
    <string-array name="placetype">
        <item>Choose Type of Place</item>
        <item>Restaurant</item>
        <item>Commercial Place</item>
        <item>House</item>
        <item>Function</item>
    </string-array>

    <string-array name="timetaken">
        <item>Cooked Before</item>
        <item>1 Hour</item>
        <item>2 Hours</item>
        <item>3 Hours</item>
        <item>4 Hours</item>
        <item>5 Hours</item>
    </string-array>

    <string-array name="recipient">
        <item>Select Recipient</item>
        <item>Deaf and Dumb School</item>
        <item>Orphans Old Age Home</item>
    </string-array>


    <string-array name="organization_type">
        <item>Type of Recipient</item>
        <item>Hostel</item>
        <item>Mess</item>
        <item>Orphanages</item>
        <item>Old Age Homes</item>
    </string-array>
    <string name="Multiline_Text_By_N">
        Line number 1 \nLine number 2
    </string>
    <string name="gallery">Gallery</string>
    <string name="profile">Profile</string>
    <string name="upload">Upload Photos</string>
    <string name="message">We feel very Happy to see you Here.\nYou will be notified when there is a Donation\n\nHappy Volunteering !</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="yes">Clicked Yes !</string>
    <string name="no">Clicked No !</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="links">links</string>
    <string name="enter_message">Enter Message</string>
    <string name="send">SEND</string>
    <string name="search_donor">Search Donor</string>
    <string name="chat_room">Chat Room</string>
    <string name="events">Events</string>
    <string name="login">Login</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_in">Sign in</string>
    <string name="new_user_click_here_to_register">New User ? Click here to Register</string>
    <string name="register">Register</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_mobile">Enter Mobile</string>
    <string name="enter_pin_code">Enter Pin Code</string>
    <string name="sign_up">Sign up</string>
    <string name="already_a_member_click_here">Already a Member Click Here !</string>
    <string name="blood_donation_camp">Blood donation camp</string>
    <string name="vizag">vizag</string>
    <string name="date_20_02_2018">Date: 20/02/2018</string>
    <string name="select_date">Select Date</string>
    <string name="location">Location</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="signout">Sign Out</string>
    <string name="no_internet_connection_available">No Internet Connection Available</string>
    <string name="enter_location">Enter Location</string>
    <string name="enter_description">Enter Description</string>
    <string name="last_blood_donation_date">Last Blood Donation Date</string>
    <string name="save">save</string>
    <string name="enter_age">Enter Age</string>
    <string name="forgot_password_click_here">Forgot Password ? Click here</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="enter_email_id">Enter Email ID</string>
    <string name="close">Close</string>
    <string name="last_blood_donation">Last Donation</string>
    <string name="no_events_to_display">No Events to Display</string>
    <string name="welcome_message">Welcome</string>
    <string name="fcm_token">FCM Token: %s</string>
    <string name="default_notification_channel_id">admin_channel</string>
    <string name="contact_us">Contact Us</string>
    <string name="_17341a1236_gmrit_edu_in">17341A1236@gmrit.edu.in</string>
    <string name="_91_63031_49161">+91 63031 49161</string>
    <string name="department_of_information_technology">Department of Information Technology</string>
    <string name="gmr_institute_of_technology">GMR Institute of Technology \n Andhra Pradesh, India</string>
    <string name="welcome_administrator">Welcome Administrator !</string>
    <string name="volunteer_phone_number">Volunteer Phone Number</string>
    <string name="search">Search</string>
    <string name="volunteer_name">Volunteer Name :</string>
    <string name="contact_number">Contact Number :</string>
    <string name="email_id">Email ID :</string>
    <string name="deliveries">Deliveries :</string>
    <string name="normal_status">Normal Status</string>
    <string name="high_status">High Status</string>
    <string name="help_other_people_eat_hope">Help Other People Eat (HOPE)</string>
    <string name="submit_details">SUBMIT DETAILS</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="celebrate">Celebrate \n Happy Moments with Us!</string>
    <string name="name_of_donor">Name of Donor</string>
    <string name="donor_phone_number">Donor Phone Number</string>
    <string name="donor_email_id">Donor Email ID</string>
    <string name="donor_address">Donor Address</string>
    <string name="date_of_celebration">Date of Celebration</string>
    <string name="donation_money">Donation Money</string>
    <string name="report_problems_here">Report Problems Here</string>
    <string name="suggestions_compliants">Suggestions/Compliants</string>
    <string name="welcome_back">Welcome back !</string>
    <string name="donate_food">Donate Food</string>
    <string name="volunteer">Volunteer</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="try_again">Try Again</string>
    <string name="doing_good_does_you_good">Doing Good Does You Good.</string>
    <string name="name">Name</string>
    <string name="already_have_an_account_sign_in">Already Have an Account? Sign in</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="email_id1">Email ID</string>
    <string name="type">Type :</string>
    <string name="phone_no">Phone No :</string>
    <string name="status">Status</string>
    <string name="ready">Ready</string>
    <string name="enter_donor_name">Enter Donor Name</string>
    <string name="saikiran_kopparthi">Saikiran Kopparthi</string>
    <string name="_9908721573">9908721573</string>
    <string name="knvrssaikiran_gmail_com">knvrssaikiran@gmail.com</string>
    <string name="total_no_of_deliveries">Total No. of Deliveries :</string>
    <string name="enter_username">Enter Username</string>
    <string name="new_recipient_click_here_to_register">New Recipient ? CLick here to Register</string>
    <string name="welcome_recipients">Welcome Recipients !</string>
    <string name="spirit_of_giving">Spirit of Giving</string>
    <string name="name_of_organization">Name of Organization</string>
    <string name="username">Username</string>
    <string name="post_donated_photo">Post Donated Photo</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="enter_place">Enter Place</string>
    <string name="no_of_people_benefitted">No. of People Benefitted</string>
    <string name="posted_by">Posted By</string>
    <string name="kakinada">Kakinada</string>
    <string name="celebrate_birthday">Celebrate Birthday</string>
    <string name="hunger_statistics">Hunger Statistics</string>
    <string name="recipients">Recipients</string>
    <string name="about">About</string>
    <string name="report_issues">Report Issues</string>
    <string name="hello_recip">Lend a hand</string>
    <string name="no_of_people">Food can feed  (No. of People)</string>
    <string name="saikiran">Saikiran</string>
    <string name="time">Time</string>
    <string name="enter_otp">Enter One Time Password</string>
    <string name="validate">validate OTP</string>
    <string name="code">code</string>
    <string name="bun_name">name</string>
    <string name="bun_place">place</string>
    <string name="bun_address">address</string>
    <string name="bun_phone">phone</string>
    <string name="foodno">foodno</string>
    <string name="bun_time">time</string>
    <string name="currentdate">date</string>
    <string name="verification_code">Verification Code</string>
    <string name="please_enter_verification_code_sent_to_n_91xxxxxxx">Please enter Verification code sent to \n+91xxxxxxx</string>
    <string name="validate_otp">Validate OTP</string>
    <string name="sthree_raksha">Sthree Raksha</string>
    <string name="emergency">Emergency Alert</string>
    <string name="contact_police">Contact Police</string>
    <string name="road_safety">Road Safety</string>
    <string name="important_phone">Important Phone</string>
    <string name="stand_up_for_women_s_safety">Stand up for Women\'s Safety</string>
    <string name="donate_food_as_a_guest">Donate Food as a Guest</string>
    <string name="donor_sign_in_activity">Donor Sign In Activity</string>
    <string name="no_one_has_ever_become_poor_by_giving">No One has ever become Poor by Giving</string>
    <string name="we_feel_very_happy_to_see_you_here">We feel very Happy to see you Here</string>
    <string name="view_donations">View Donations</string>
</resources>
