<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activities.administrator.AdminActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/open_sans"
            android:text="@string/welcome_administrator"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="0.5">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/volphone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/volunteer_phone_number"
                    android:inputType="number"
                    android:maxLength="10"
                    android:padding="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/sear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1.5"
                android:background="@drawable/button"
                android:drawable="@drawable/ic_mail"
                android:src="@drawable/search"
                android:text="@string/search"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/volunteer_name"
                    android:textColor="@color/black"
                    android:textSize="18sp" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/contact_number"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/email_id"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/deliveries"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textSize="18sp" />


                <TextView
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textSize="18sp" />


                <TextView
                    android:id="@+id/emailid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textSize="16sp" />


                <TextView
                    android:id="@+id/count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/high_status"
            android:textColor="#000"
            android:textSize="21sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/norma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/normal_status"
            android:textColor="#000"
            android:textSize="21sp"
            android:visibility="gone" />


    </LinearLayout>
</androidx.core.widget.NestedScrollView>