<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:layout_margin="5dp"
    android:orientation="vertical"
    tools:context=".activities.volunteer.ResetPasswordActivity"
    tools:ignore="Autofill">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/open_sans"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="21sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/res_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/open_sans"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/btn_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/button"
        android:fontFamily="@font/open_sans"
        android:gravity="center"
        android:text="@string/submit"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/after"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/open_sans"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="15sp" />
</LinearLayout>