<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".SthreeRaksha">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sthree_raksha"
        android:layout_gravity="center_horizontal"
        android:drawableStart="@drawable/sthree_icon"
        android:textSize="28sp"
        android:drawablePadding="52dp"
        android:textColor="#000"
        android:textStyle="bold"
        android:layout_marginTop="20dp">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stand_up_for_women_s_safety"
        android:layout_gravity="end"
        android:textSize="20sp"
        android:textStyle="italic"
        android:textColor="#5E5D5D"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="-42dp">
    </TextView>


   <!-- <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="vertical"
        android:weightSum="2"
        android:layout_marginTop="20dp">
        <LinearLayout
            android:id="@+id/layout_emergency"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:contentDescription="@string/app_name"
                android:padding="10dp"
                android:src="@drawable/emergency" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:text="@string/emergency"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="19sp" />
        </LinearLayout>
-->
        <LinearLayout
            android:id="@+id/policelayout"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:contentDescription="@string/app_name"
                android:padding="10dp"
                android:src="@drawable/police" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/contact_police"
                android:textColor="@android:color/black"
                android:textSize="19sp" />
        </LinearLayout>
    </LinearLayout>
