<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DonorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/donorname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="@font/open_sans"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_marginBottom="25dp"
            android:textSize="28sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:layout_gravity="center"
            android:padding="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/smiling" />


        <TextView
            android:id="@+id/donorphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/open_sans"
            android:gravity="left"
            android:drawableLeft="@drawable/ic_phone_black_24dp"
            android:drawablePadding="10dp"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/donorplace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="25dp"
            android:drawableLeft="@drawable/ic_info_black_24dp"
            android:drawablePadding="10dp"
            android:fontFamily="@font/open_sans"
            android:gravity="left"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/donoraddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/open_sans"
            android:gravity="left"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_place_black_24dp"
            android:textColor="@color/black"
            android:layout_marginBottom="25dp"
            android:textSize="20sp" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/noofpeople"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:hint="@string/no_of_people"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/time"
            style="@style/AppTheme.FilterSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:entries="@array/timetaken" />


        <Button
            android:id="@+id/sub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button"
            android:fontFamily="@font/open_sans"
            android:padding="10dp"
            android:text="@string/submit_details"
            android:textColor="@color/white" />

    </LinearLayout>


</androidx.core.widget.NestedScrollView>